# pscript

./: .gitignore  Compiler.hs  DOC.md  Datatype.hs  Lexer.hs  Main.hs  Parser.y  README.md  Scope.hs  Util.hs  compile.sh  pscript.cabal  stdlib.ps  test.ps  test.röd  tests.txt
doc/: DOC.md  types.dot
eg/: exp.ps  exp.pscript  primes.pscript  sdlTest.pscript  stdlib.ps  stdlib.pscript  test.ps  test.pscript
lib/: core.pscript
script/: compile.sh
src/: Compiler.hs  Datatype.hs  Documentator.hs  Lexer.hs  Main.hs  Parser.y  Scope.hs  Util.hs
test/: test.röd  tests.txt
