name: pscript
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
description:


executable pscript
    main-is: Main.hs
    build-depends:
        base -any,
        containers -any,
        directory -any,
        mtl -any,
        split -any

    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans -O0
